@@ -1,5 +1,6 @@
 
 8.19  2019-06-29
+  - Added -f option to generate plugin command.
   - Fixed daemonize exception handling in Mojo::Server. (skaji)
 
 8.18  2019-06-28
